--- a/packages/bot/botkit/package.json
+++ b/packages/bot/botkit/package.json
@@ -36,6 +36,7 @@
     "debug": "^4.3.3",
     "download": "^8.0.0",
     "esbuild": "^0.14.49",
+    "fringe": "^1.1.1",
     "node-fetch": "^2.6.0",
     "source-map-support": "^0.5.12",
     "tail": "~2.2.4"
