--- a/packages/experimental/plexus/package.json
+++ b/packages/experimental/plexus/package.json
@@ -17,6 +17,7 @@
     "@dxos/gem-core": "workspace:*",
     "@dxos/gem-spore": "workspace:*",
     "@dxos/node-std": "workspace:*",
+    "@dxos/react-appkit": "workspace:*",
     "@dxos/util": "workspace:*",
     "@phosphor-icons/react": "^2.0.5",
     "assert": "^2.0.0",
