Fix Storybook. TODO: fix open state issue.

--- a/packages/ui/aurora/tsconfig.json
+++ b/packages/ui/aurora/tsconfig.json
@@ -27,6 +27,9 @@
       "path": "../aurora-types"
     },
     {
+      "path": "../primitives/react-combobox"
+    },
+    {
       "path": "../primitives/react-hooks"
     },
     {
