WIP: refactor observability

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -269,6 +269,11 @@
         },
         {
           "type": "json",
+          "path": "packages/common/observability/package.json",
+          "jsonpath": "$.version"
+        },
+        {
+          "type": "json",
           "path": "packages/common/phoenix/package.json",
           "jsonpath": "$.version"
         },
