--- a/packages/devtools/cli/package.json
+++ b/packages/devtools/cli/package.json
@@ -43,6 +43,7 @@
     "@dxos/hello-template": "workspace:*",
     "@dxos/invariant": "workspace:*",
     "@dxos/log": "workspace:*",
+    "@dxos/observability": "workspace:*",
     "@dxos/plate": "workspace:*",
     "@dxos/process": "workspace:*",
     "@dxos/protocols": "workspace:*",
