--- a/packages/devtools/cli/tsconfig.json
+++ b/packages/devtools/cli/tsconfig.json
@@ -48,6 +48,9 @@
       "path": "../../common/log"
     },
     {
+      "path": "../../common/observability"
+    },
+    {
       "path": "../../common/plate"
     },
     {
