--- a/packages/devtools/cli/tsconfig.json
+++ b/packages/devtools/cli/tsconfig.json
@@ -72,6 +72,9 @@
       "path": "../../core/functions"
     },
     {
+      "path": "../../core/mesh/network-manager"
+    },
+    {
       "path": "../../core/mesh/rpc"
     },
     {
