--- a/packages/apps/composer-app/dx.yml
+++ b/packages/apps/composer-app/dx.yml
@@ -15,6 +15,8 @@ runtime:
   client:
     storage:
       persistent: true
+  log:
+    filter: network-manager:debug,teleport:debug,echo-pipeline:debug,messaging:debug
 
   services:
     signaling:
